Added County Press News Source

--- a/news_Ticker.html
+++ b/news_Ticker.html
@@ -55,16 +55,20 @@
   </div>
 
   <script>
-    const sources = [
-      {
-        name: "Fox News",
-        rss: "https://feeds.foxnews.com/foxnews/latest"
-      },
-      {
-        name: "Breitbart",
-        rss: "https://feeds.feedburner.com/breitbart"
-      }
-    ];
+const sources = [
+  {
+    name: "Fox News",
+    rss: "https://feeds.foxnews.com/foxnews/latest"
+  },
+  {
+    name: "Breitbart",
+    rss: "https://feeds.feedburner.com/breitbart"
+  },
+  {
+    name: "County Press Lapeer",
+    rss: "https://www.countypress.com/feed"
+  }
+];
 
     const API_BASE = "https://api.rss2json.com/v1/api.json?rss_url=";
 
