--- a/news_Ticker.html
+++ b/news_Ticker.html
@@ -101,7 +101,7 @@
         if (item.source.toLowerCase().includes("fox")) {
           logo = `<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Fox_News_Channel_logo.svg/120px-Fox_News_Channel_logo.svg.png" alt="Fox News" class="source-logo" />`;
         } else if (item.source.toLowerCase().includes("breitbart")) {
-          logo = `<img src="https://seeklogo.com/images/B/breitbart-logo-B48F48C7F8-seeklogo.com.png" alt="Breitbart" class="source-logo" />`;
+          logo = "";
         }
 
         div.innerHTML = `${logo}<a href="${item.link}" target="_blank" rel="noopener noreferrer">${item.title}</a>`;
